2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c: Rework and improve the documentation
	of the thread-safe timeout and idle source installer functions.

2008-08-01  Neil Roberts  <neil@o-hand.com>

	Bug 945 - Clipping+fbo cloning bugs

	* clutter/cogl/gl/cogl.c: 
	* clutter/cogl/gles/cogl.c: 
	* clutter/cogl/cogl.h.in: Add cogl_clip_stack_save,
	cogl_clip_stack_restore, cogl_viewport and cogl_frustum.

	* clutter/cogl/gl/cogl-fbo.h: 
	* clutter/cogl/gl/cogl-fbo.c: Try to attach a stencil buffer when
	creating an FBO.

	* clutter/cogl/common/cogl-clip-stack.c: Add functions to save and
	restore the whole state of the stack.

	* clutter/clutter-texture.c (clutter_texture_paint): When
	rendering the FBO source, setup a temporary asymmetric perspective
	projection matrix to render it as it would appear on screen.

	* clutter/clutter-private.h: 
	* clutter/clutter-actor.c
	(_clutter_actor_apply_modelview_transform_recursive): No longer
	static and exported in clutter-private.h

2008-08-01  Neil Roberts  <neil@o-hand.com>

	Bug 1071 - clutter_timeline_get_duration doesn't always work

	* clutter/clutter-timeline.c: Calculate the 'duration' property
	on-demand instead of storing it as a member variable. Notify
	duration property changes whenever the fps or num_frames changes.

2008-08-01  Neil Roberts  <neil@o-hand.com>

	Bug 1069 - Warnings with ClutterScore

	* clutter/clutter-score.c (clutter_score_is_playing): Check
	whether priv->running_timelines is NULL before checking its
	length.
	(foreach_running_timeline): Remove the completed signal handler
	when stopping the score. Otherwise the completed callback will get
	called multiple times if the timeline is started later.

2008-07-31  Neil Roberts  <neil@o-hand.com>

	Bug 1075 - Difficult to bind clutter_stage_new

	* clutter/clutter-stage.c (clutter_stage_dispose): Unrealize the
	stage before removing the update idle handler. Otherwise